css fix for scrollbar in tag

--- a/css/global.css
+++ b/css/global.css
@@ -30,3 +30,5 @@ html, body { margin: 0; padding: 0; text-align: center;}
     height: 0px;
     overflow: hidden;
 }
+
+.element::-webkit-scrollbar { width: 0 !important }
